Fixing the alignment of the reservation text

--- a/scss/bookings.scss
+++ b/scss/bookings.scss
@@ -33,6 +33,12 @@
 }
 
 .reservation-extension {
+  .reservation-text {
+    line-height: 26px;
+    padding: 4px 1px 2px;
+    font-size: 12px;
+  }
+
   .button {
     margin-left: 1rem;
   }
